ngModule, ngForm, Bootstrap

--- a/Client-side/helloWorld/src/app/app.component.html
+++ b/Client-side/helloWorld/src/app/app.component.html
@@ -9,6 +9,8 @@
 <body>
   <router-outlet></router-outlet>
   <div>Hello!, welcome to anugular application</div>
+  <h1 class="display-1">Form</h1>
+  <app-user-form></app-user-form>
 </body>
 </html>
 
