added navBar and integrated angular material

--- a/Client-side/helloWorld/src/app/app.component.html
+++ b/Client-side/helloWorld/src/app/app.component.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <router-outlet></router-outlet>
-  <div>Hello!, welcome to anugular application</div>
-  <h1 class="display-1">Form</h1>
-  <app-user-form></app-user-form>
-</body>
-</html>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-user-form></app-user-form>
+
 
