--- a/Client-side/helloWorld/src/app/Components/navbar/navbar.component.html
+++ b/Client-side/helloWorld/src/app/Components/navbar/navbar.component.html
@@ -1,16 +1,19 @@
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-light" >
+    <div class="container-fluid" style="background-color: cornflowerblue;">
       <a class="navbar-brand" href="#">User Registration</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
+      <div class="collapse navbar-collapse" id="navbarText" >
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="" href="#">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="register">Registration</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="reg">Registered Users</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="about">About</a>
