--- a/Client-side/helloWorld/src/app/Components/reg-users/reg-users.component.html
+++ b/Client-side/helloWorld/src/app/Components/reg-users/reg-users.component.html
@@ -1,4 +1,7 @@
-<h1 class="display-2" style="text-align: center; background-color: aquamarine; color: black;">Registered User</h1>
+<h1 class="display-2" style="text-align: center; background-color: aquamarine; color: black;">Registered User</h1> 
+<div style="padding-right: 25px; padding-top: 15px; text-align: right;">
+  <button  type="button" (click)="sort()" class="btn btn-success"> ↕ Sort</button>
+</div>
 <ol style="padding: 100px;" class="list-group list-group-numbered">
     <li *ngFor="let u of users, index as i" class="list-group-item d-flex justify-content-between align-items-start">
       <div class="ms-2 me-auto">
@@ -8,4 +11,5 @@
       <button type="button" (click)="deleteRow(u,i)"class="btn btn-warning" style="color: red;">Delete</button>
 
     </li>
+
   </ol>
