--- a/Client-side/helloWorld/src/app/Components/navbar/navbar.component.html
+++ b/Client-side/helloWorld/src/app/Components/navbar/navbar.component.html
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="contactus">Contact Us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="pipes">Pipes</a>
+          </li>
         </ul>
       </div>
     </div>
