--- a/Client-side/Library-Management-system/src/app/Components/nav-bar/nav-bar.component.html
+++ b/Client-side/Library-Management-system/src/app/Components/nav-bar/nav-bar.component.html
@@ -14,10 +14,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Create</a>
+          <a class="nav-link" routerLink="create">Create</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Books</a>
+          <a class="nav-link" routerLink="getbook">Books</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
