--- a/Client-side/Library-Management-system/src/app/Components/get-books/get-books.component.html
+++ b/Client-side/Library-Management-system/src/app/Components/get-books/get-books.component.html
@@ -1,1 +1,15 @@
-<p>get-books works!</p>
+<h1 class="display-2" style="text-align: center; background-color: aquamarine; color: black;">Registered User</h1> 
+<div style="padding-right: 25px; padding-top: 15px; text-align: right;">
+<!--  <button  type="button" (click)="sort()" class="btn btn-success"> ↕ Sort</button>  -->
+</div>
+<ol style="padding: 100px;" class="list-group list-group-numbered">
+    <li *ngFor="let b of books, index as i" class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <div class="fw-bold">{{b.bookName}}</div>
+        {{b.bookAuthor}}
+      </div>
+      <button type="button" (click)="deleteBook(b,i)"class="btn btn-warning" style="color: red;">Delete</button>
+
+    </li>
+
+  </ol>
