--- a/Client-side/Library-Management-system/src/app/Components/nav-bar/nav-bar.component.html
+++ b/Client-side/Library-Management-system/src/app/Components/nav-bar/nav-bar.component.html
@@ -20,9 +20,9 @@
           <a class="nav-link" routerLink="getbook">Books</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <form class="d-flex"  #regForm='ngForm' name="myForm" #myForm="ngForm" (ngSubmit)="saveQueryToSessionStorage(myForm)">
+        <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="inputSearch" [(ngModel)]="book">
+        <button class="btn btn-outline-success" type="submit" [disabled]="!regForm.valid">Search</button>
       </form>
     </div>
   </div>
