--- a/Client-side/helloWorld/src/app/Components/user-form/user-form.component.html
+++ b/Client-side/helloWorld/src/app/Components/user-form/user-form.component.html
@@ -27,7 +27,7 @@
           Male
         </label>
         <div class="form-check">
-            <input value="female" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" [(ngModel)]="u3ser.gender">
+            <input value="female" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" [(ngModel)]="user.gender">
             <label class="form-check-label" for="flexRadioDefault1">
               Female
             </label>
