--- a/Client-side/Library-Management-system/src/app/Components/footer/footer.component.html
+++ b/Client-side/Library-Management-system/src/app/Components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div class="text-center p-4" >
       © 2022 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Library Management System</a>
+      <a href="https://mdbootstrap.com/" style="color: black;">Library Management System</a>
       <i class="fa-brands fa-square-instagram"></i>
     </div>
     <!-- Copyright -->
