--- a/Client-side/todo-app/src/app/Components/add-todo/add-todo.component.html
+++ b/Client-side/todo-app/src/app/Components/add-todo/add-todo.component.html
@@ -7,8 +7,7 @@
          Add or remove your todos!
         </figcaption>
       </figure>
-<div class="input-group input-group-lg" style="margin-right: 100px; width: auto; 
-    margin-left: 100px; border-style: solid; border-color: chartreuse; border-radius: 10px;">
+<div class="input-group input-group-lg">
     <span class="input-group-text" id="inputGroup-sizing-lg">Enter your todos</span>
     <input  #todoItem type="text" class="form-control" aria-label="Sizing example input" 
     aria-describedby="inputGroup-sizing-lg" placeholder="Enter your todos..">
