--- a/Client-side/Library-Management-system/src/app/Components/create-book/create-book.component.css
+++ b/Client-side/Library-Management-system/src/app/Components/create-book/create-book.component.css
@@ -1,6 +1,14 @@
 #outer{
     align-content: center;
+    position:absolute;
 }
 input{
     width: 400px;
+}
+label{
+    border-bottom:1px solid #000;
+}
+img{
+    width: 100%;
+    position:relative;
 }
