--- a/Client-side/Library-Management-system/src/app/Components/footer/footer.component.css
+++ b/Client-side/Library-Management-system/src/app/Components/footer/footer.component.css
@@ -5,5 +5,6 @@ footer {
     width: 100%;
     text-align: center;
     color: white;
-    background-color: black;
+    
+    background-color: #ababab;
  }
