--- a/Client-side/Library-Management-system/src/app/Components/search-bok/search-bok.component.html
+++ b/Client-side/Library-Management-system/src/app/Components/search-bok/search-bok.component.html
@@ -1,14 +1,20 @@
-<h1 class="display-2" style="text-align: center; background-color: aquamarine; color: black;">Searched books</h1> 
-<div style="padding-right: 25px; padding-top: 15px; text-align: right;">
-<!--  <button  type="button" (click)="sort()" class="btn btn-success"> ↕ Sort</button>  -->
+<div>
+	<h3 style="background-color: black; color: burlywood; text-align: center; padding-top: 5px;border-bottom:1px solid burlywood;">
+		Book Found
+	  </h3>
+    <ul class="tilesWrap">
+    <li>
+        <h2>{{book.bookId}}</h2>
+        <h3>{{book.bookName}}</h3>
+        <p><span>Author - </span>
+          {{book.bookAuthor}}	
+        </p>
+        <p><span>Genre - </span>
+          {{book.bookGenre}}
+        </p>
+        <p><span>Price - </span>
+          {{book.bookPrice | currency:'EUR'}}
+        </p>
+      </li>
+    </ul>
 </div>
-<ol style="padding: 100px;" class="list-group list-group-numbered">
-    <li class="list-group-item d-flex justify-content-between align-items-start">
-      <div class="ms-2 me-auto">
-        <div class="fw-bold">{{book.bookName}}</div>
-        {{book.bookAuthor}}
-      </div>
-
-    </li>
-
-  </ol>
