icons added in getList

--- a/Client-side/Library-Management-system/src/app/Components/get-books/get-books.component.html
+++ b/Client-side/Library-Management-system/src/app/Components/get-books/get-books.component.html
@@ -4,7 +4,7 @@
 	  </h3>
 <ul class="tilesWrap">
 	<li *ngFor="let b of books,index as i">
-		<h2>{{b.bookId}}</h2>
+		<h2><img style="border-radius: 50%;" width="55px" height="55px" src="/assets/icon.jpg"></h2>
 		<h3>{{b.bookName}}</h3>
 		<p><span>Author - </span>
 			{{b.bookAuthor}}	
