--- a/Client-side/Library-Management-system/src/app/Components/get-books/get-books.component.css
+++ b/Client-side/Library-Management-system/src/app/Components/get-books/get-books.component.css
@@ -22,12 +22,12 @@
 	border: 1px solid #252727;
 	text-align: left;
 }
+
 .tilesWrap li h2 {
-	font-size: 100px;
-	margin: 0;
+	margin-top: 10px;
 	position: absolute;
 	opacity: 0.2;
-	top: 20px;
+	top: 1px;
 	right: 10px;
 	transition: all 0.3s ease-in-out;
 }
