--- a/Client-side/DigitalBook/src/app/Component/register/register.component.html
+++ b/Client-side/DigitalBook/src/app/Component/register/register.component.html
@@ -1,96 +1,34 @@
-<div class="col-md-12">
-    <div class="card card-container">
-      <form
-        *ngIf="!isSuccessful"
-        name="form"
-        (ngSubmit)="f.form.valid && onSubmit()"
-        #f="ngForm"
-        novalidate
-      >
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            name="username"
-            [(ngModel)]="form.username"
-            required
-            minlength="3"
-            maxlength="20"
-            #username="ngModel"
-          />
-          <div class="alert-danger" *ngIf="username.errors && f.submitted">
-            <div *ngIf="username.errors.required">Username is required</div>
-            <div *ngIf="username.errors.minlength">
-              Username must be at least 3 characters
+
+<div id="outer" style="width: 50%; border-radius: 5px; border-color: 
+#f2ad18; background-color: #f5cf7d; margin-left: 375px;  border-style: double; margin-top: 25px;">
+    <h2 style="padding-left: 180px;"><b>Create your own book!</b></h2>
+    <div id="inner" style="padding-left: 30px;">
+        <form  name="myForm" #myForm="ngForm" #regForm='ngForm' (ngSubmit)='onSubmit(myForm)'>
+            
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">Username</label>
+              <input name="author" type="text" required
+              placeholder="Enter Book Author" class="form-control" id="exampleInputPassword1"  [(ngModel)]="register.username">
             </div>
-            <div *ngIf="username.errors.maxlength">
-              Username must be at most 20 characters
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">password</label>
+              <input name="password" type="text" required
+              placeholder="Enter Book Author" class="form-control" id="exampleInputPassword1"  [(ngModel)]="register.password">
             </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            name="email"
-            [(ngModel)]="form.email"
-            required
-            email
-            #email="ngModel"
-          />
-          <div class="alert-danger" *ngIf="email.errors && f.submitted">
-            <div *ngIf="email.errors.required">Email is required</div>
-            <div *ngIf="email.errors.email">
-              Email must be a valid email address
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">email</label>
+              <input name="email" type="text" required
+              placeholder="Enter Book Author" class="form-control" id="exampleInputPassword1"  [(ngModel)]="register.email">
             </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="email">role</label>
-          <input
-            type="text"
-            class="form-control"
-            name="role"
-            [(ngModel)]="form.role"
-          />
-          <div class="alert-danger" >
-            <div>role is reqiored</div>
-            <div>
-              Email must be a valid email address
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label">role</label>
+              <input name="role" type="text" required
+              placeholder="Enter Book Author" class="form-control" id="exampleInputPassword1"  [(ngModel)]="register.role">
             </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            name="password"
-            [(ngModel)]="form.password"
-            required
-            minlength="6"
-            #password="ngModel"
-          />
-          <div class="alert-danger" *ngIf="password.errors && f.submitted">
-            <div *ngIf="password.errors.required">Password is required</div>
-            <div *ngIf="password.errors.minlength">
-              Password must be at least 6 characters
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <button class="btn btn-primary btn-block">Sign Up</button>
-        </div>
-  
-        <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
-          Signup failed!<br />{{ errorMessage }}
-        </div>
-      </form>
-  
-      <div class="alert alert-success" *ngIf="isSuccessful">
-        Your registration is successful!
-      </div>
+            
+            <button type="submit" class="btn btn-primary" [disabled]="!regForm.valid" style="margin-bottom: 10px; background-color: black;">Submit</button>
+            <br>
+            
+          </form>
     </div>
-  </div>
+</div>
