--- a/Client-side/DigitalBook/src/app/app.component.html
+++ b/Client-side/DigitalBook/src/app/app.component.html
@@ -6,7 +6,7 @@
           <a href="/home" class="nav-link" routerLink="home">Home </a>
         </li>
         <li class="nav-item" *ngIf="showReaderBoard">
-          <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
+          <a href="admin" class="nav-link" routerLink="readerdashboard">Admin Board</a>
         </li>
         <li class="nav-item">
           <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
