--- a/Client-side/DigitalBook/src/app/Component/home-navbar/home-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/home-navbar/home-navbar.component.html
@@ -5,7 +5,7 @@
             <a href=""  [routerLink]="['login']"><i class="material-icons">login</i> <span class="nav-text"> Login</span></a>
           </div>
          <div class="dropdown">
-           <a href=""><i class="material-icons"> how_to_reg</i> <span class="nav-text"> Guest User</span></a>
+           <a  (click)="guestRedirect()"><i class="material-icons"> how_to_reg</i> <span class="nav-text"> Guest User</span></a>
          </div> 
          <li style="float: right; margin-right: 45px;"><a [routerLink]="['/contactUs']"><span class="material-icons">contacts</span> <span class="nav-text"> Contact us</span></a></li> 
         </ul>
