--- a/Client-side/DigitalBook/src/app/Component/navbr/navbr.component.css
+++ b/Client-side/DigitalBook/src/app/Component/navbr/navbr.component.css
@@ -1,14 +1,13 @@
-/* Footer */
-body{
-  background-color: rgb(27, 13, 0);
-}
+
 .footer {
     padding: 20px;
     text-align: center;
     background:black;
-    margin-top: 20px;
     width: 100%;
     margin: auto;
+    position: relative;
+    left: 0;
+    bottom: 0;
   }
   .social a{
       padding: 10px;
@@ -60,4 +59,3 @@ body{
     {
       font-size:17px;
     }
-    
