navbar created and register page

--- a/Client-side/DigitalBook/src/app/Component/guest-dashboard/guest-dashboard.component.html
+++ b/Client-side/DigitalBook/src/app/Component/guest-dashboard/guest-dashboard.component.html
@@ -1,7 +1,8 @@
+<app-guest-navbar></app-guest-navbar>
 <div class="outer">
     <h3
         style="background-color: black; color: burlywood; text-align: center; padding-top: 5px;border-bottom:1px solid burlywood;">
-        Available Books
+        Explore Available Books
     </h3>
     {{content}}
     <ul class="tilesWrap">
