--- a/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
@@ -1,1 +1,28 @@
-<p>author-navbar works!</p>
+<style src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></style>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid"  style="background-color: #f0ba3e;">
+    <a><b>Hello Guest, </b>{{username}}</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    &nbsp;&nbsp;&nbsp;
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <i class="fa-thin fa-house"></i>
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" >My Books</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="logout()">Logout</a>
+        </li>
+      </ul>
+      <form class="d-flex"  >
+        <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="inputSearch">
+        <button class="btn btn-outline-success" type="submit" >Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
