--- a/Client-side/DigitalBook/src/app/Component/reader-dashboard/reader-dashboard.component.html
+++ b/Client-side/DigitalBook/src/app/Component/reader-dashboard/reader-dashboard.component.html
@@ -3,7 +3,7 @@
 <div class="outer">
     <h3
         style="background-color: black; color: burlywood; text-align: center; padding-top: 5px;border-bottom:1px solid burlywood;">
-        Available Books
+        Explore Available Books
     </h3>
     {{content}}
     <ul class="tilesWrap">
