--- a/Client-side/DigitalBook/src/app/Component/guest-navbar/guest-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/guest-navbar/guest-navbar.component.html
@@ -1,7 +1,7 @@
 <style src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></style>
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid"  style="background-color: #f0ba3e;">
-    <a><b>Hello Author, </b>{{username}}</a>
+    <a><b>Hello, </b>{{username}}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,15 +13,15 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" >Register</a>
+          <a class="nav-link"  [routerLink]="[ 'register']">Register</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="logout()">Logout</a>
         </li>
       </ul>
-      <form class="d-flex"  >
-        <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="inputSearch">
-        <button class="btn btn-outline-success" type="submit" >Search</button>
+      <form class="d-flex"  #regForm='ngForm' name="myForm" #myForm="ngForm" (ngSubmit)="saveQueryToSessionStorage(myForm)">
+        <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search" name="inputSearch"  [(ngModel)]="book">
+        <button class="btn btn-outline-success" type="submit"  [disabled]="!regForm.valid">Search</button>
       </form>
     </div>
   </div>
