--- a/Client-side/DigitalBook/src/app/Component/register/register.component.html
+++ b/Client-side/DigitalBook/src/app/Component/register/register.component.html
@@ -1,4 +1,4 @@
-<app-home-navbar></app-home-navbar>
+
 <div class="user">
   <header class="user__header">
       <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg" alt="" />
@@ -19,7 +19,7 @@
       
       <div class="form__group">
         <input name="email" type="text" required
-        placeholder="Emailr" class="form__input" id="exampleInputPassword1"  [(ngModel)]="register.email">
+        placeholder="Email" class="form__input" id="exampleInputPassword1"  [(ngModel)]="register.email">
       </div>
 
       <div class="form__group">
@@ -27,7 +27,6 @@
         placeholder="Role" class="form__input" id="exampleInputPassword1"  [(ngModel)]="register.role">
       </div>
       
-      <button type="submit" class="btn btn-primary" [disabled]="!regForm.valid" style="margin-bottom: 10px; background-color: black;">Submit</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!regForm.valid" style="margin-bottom: 10px; background-color: rgb(230, 151, 49);">Sign Up</button>
   </form>
 </div>
-<app-navbr></app-navbr>
