--- a/Client-side/DigitalBook/src/app/Component/home/home.component.html
+++ b/Client-side/DigitalBook/src/app/Component/home/home.component.html
@@ -12,8 +12,8 @@
     <section class="start">
         <div class="banner">
             <h1>Goodbye to the old ways.<br>Say, hello to the new avtar of Learning!</h1>
-            <a href="#" class="btn login-btn">Login </a>
-            <a href="#" class="btn register-btn">Guest Reader</a>
+            <a href="#" class="btn login-btn" [routerLink]="['login']">Login </a>
+            <a href="#" class="btn register-btn" (click)="guestRedirect()">Guest Reader</a>
            
         </div>
      </section>   
