--- a/Client-side/DigitalBook/src/app/Component/author-dashboard/author-dashboard.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-dashboard/author-dashboard.component.html
@@ -1,25 +1,3 @@
 <app-author-navbar></app-author-navbar>
-<div class="outer">
-    <h3
-        style="background-color: black; color: burlywood; text-align: center; padding-top: 5px;border-bottom:1px solid burlywood;">
-        Explore Available Books
-    </h3>
-    {{content}}
-    <ul class="tilesWrap">
-        <li *ngFor="let b of books,index as i">
-            <h2><img style="" width="70px" height="105px" src="{{b.bookLogo}}"></h2>
-            <h3>{{b.bookTitle}}</h3>
-            <p><span>Author - </span>
-                {{b.bookPublisher}}
-            </p>
-            <p><span>Genre - </span>
-                {{b.bookCategory}}
-            </p>
-            <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
-            </p>
-            <button type="button" class="btn btn-success">Remove</button>
-        </li>
-    </ul>
-</div>
+<router-outlet></router-outlet>
 <app-navbr></app-navbr>
