--- a/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
@@ -1,7 +1,7 @@
 <style src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></style>
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid"  style="background-color: #f0ba3e;">
-    <a><b>Hello Guest, </b>{{username}}</a>
+    <a><b>Hello Author, </b>{{username}}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +13,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" >My Books</a>
+          <a class="nav-link"  routerLink="subscribedbooks">My Books</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  routerLink="createbook">Create</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  routerLink="updatebook">Update</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="logout()">Logout</a>
