--- a/Client-side/DigitalBook/src/app/Component/reader-navbar/reader-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/reader-navbar/reader-navbar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" >My Books</a>
+          <a class="nav-link" routerLink="subscribedbooks">My Books</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" (click)="logout()">Logout</a>
