--- a/Client-side/DigitalBook/src/app/Component/author-create-book/author-create-book.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-create-book/author-create-book.component.html
@@ -1,10 +1,10 @@
 <div class="page-content">
     <div class="form-v9-content" style="background-image: url('https://images.pexels.com/photos/3760323/pexels-photo-3760323.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')">
-        <form class="form-detail" name="myForm" #myForm="ngForm" #regForm='ngForm' (ngSubmit)='onSubmit(myForm)'>
-            <h2>Update Book</h2>
+        <form class="form-detail" name="myForm" #myForm="ngForm" #regForm='ngForm' (ngSubmit)='onSubmit(myForm); myForm.resetForm()' >
+            <h2>Create Book</h2>
             <div class="form-row-total">
                 <div class="form-row">
-                    <input type="number" name="full-name" id="full-name" class="input-text" placeholder="Enter Id" required  [(ngModel)]="book.bookId">
+                    <span><img src="{{bookLogo}}" width="100px" height="140px" style="margin-bottom: 10px; margin-left: 80px;"></span><span style="margin-left: 50px; font-size:20px;">{{Created!}}</span>
                 </div>
                 <div class="form-row">
                     <input type="text" name="genre" id="your-email" class="input-text" placeholder="Update Logo" required [(ngModel)]="book.bookLogo">
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="form-row-last">
-                <input type="submit" name="register" class="register" [disabled]="!regForm.valid" value="Update">
+                <input type="submit" name="register" class="register" [disabled]="!regForm.valid" value="Create">
             </div>
         </form>
     </div>
