drop down in register component added

--- a/Client-side/DigitalBook/src/app/Component/author-mybooks/author-mybooks.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-mybooks/author-mybooks.component.html
@@ -1,10 +1,11 @@
 <div class="outer">
     <h3
         style="background-color: black; color: burlywood; text-align: center; padding-top: 5px;border-bottom:1px solid burlywood;">
-        My Subscribed Books
+        My Created Books
     </h3>
     <ul class="tilesWrap">
         <li *ngFor="let b of books,index as i">
+            <div class="circle">{{b.bookId}}</div>
             <h2><img style="" width="70px" height="105px" src="{{b.bookLogo}}"></h2>
             <h3>{{b.bookTitle}}</h3>
             <p><span>Author - </span>
@@ -16,7 +17,7 @@
             <p><span>Price - </span>
                 {{b.bookPrice | currency:'EUR'}}
             </p>
-            <p><button type="button" class="btn btn-success" (click)="readBook(b)">Read Book</button> &nbsp; <button type="button" class="btn btn-success" (click)="unsubscribeMethod(b)">Unsubscribe</button></p>
+            <p><button type="button" class="btn btn-success" (click)="readBook(b)">Read Book</button></p>
         </li>
        
     </ul>
