--- a/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
@@ -13,7 +13,10 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  routerLink="subscribedbooks">My Books</a>
+          <a class="nav-link"  routerLink="subscribedbooks">Subscribed Books</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  routerLink="mybooks">My Books</a>
         </li>
         <li class="nav-item">
           <a class="nav-link"  routerLink="createbook">Create</a>
