--- a/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-navbar/author-navbar.component.html
@@ -25,6 +25,9 @@
           <a class="nav-link"  routerLink="updatebook">Update</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link"  routerLink="blockedbooks">Block books</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" (click)="logout()">Logout</a>
         </li>
       </ul>
