--- a/Client-side/DigitalBook/src/app/Component/author-blockbook/author-blockbook.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-blockbook/author-blockbook.component.html
@@ -1,11 +1,9 @@
 <div class="outer">
     <h3
         style="background-color: black; color: burlywood; text-align: center; padding-top: 5px;border-bottom:1px solid burlywood;">
-        Search Result
+        Blocked Books
     </h3>
-   
     <ul class="tilesWrap">
-        <h1 style="color: azure;">{{message}}</h1>
         <li *ngFor="let b of books,index as i">
             <h2><img style="" width="70px" height="105px" src="{{b.bookLogo}}"></h2>
             <h3>{{b.bookTitle}}</h3>
@@ -18,7 +16,8 @@
             <p><span>Price - </span>
                 {{b.bookPrice | currency:'EUR'}}
             </p>
-            <p><button type="button" class="btn btn-success" (click)="subscribeMethod(b)">Subscribe</button>&nbsp; &nbsp;&nbsp;<button type="button" class="btn btn-success" (click)="blockBook(b)">Block 🚫</button></p>
         </li>
+       
     </ul>
-  </div>
+    
+</div>
