--- a/Client-side/DigitalBook/src/app/Component/author-create-book/author-create-book.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-create-book/author-create-book.component.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-    <div class="form-v9-content" style="background-image: url('https://images.pexels.com/photos/3760323/pexels-photo-3760323.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')">
+    <div class="form-v9-content" style="background-image: url('https://images.pexels.com/photos/3760323/pexels-photo-3760323.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');">
         <form class="form-detail" name="myForm" #myForm="ngForm" #regForm='ngForm' (ngSubmit)='onSubmit(myForm); myForm.resetForm()' >
             <h2>Create Book</h2>
             <div class="form-row-total">
@@ -7,31 +7,33 @@
                     <span><img src="{{bookLogo}}" width="100px" height="140px" style="margin-bottom: 10px; margin-left: 80px;"></span><span style="margin-left: 50px; font-size:20px;">{{Created!}}</span>
                 </div>
                 <div class="form-row">
-                    <input type="text" name="genre" id="your-email" class="input-text" placeholder="Update Logo" required [(ngModel)]="book.bookLogo">
+                    <input type="text" name="genre" id="your-email" class="input-text" placeholder="Create Logo" required [(ngModel)]="book.bookLogo">
                 </div>
             </div>
             <div class="form-row-total">
                 <div class="form-row">
-                    <input type="text" name="full-name" id="full-name" class="input-text" placeholder="Update Title" required  [(ngModel)]="book.bookTitle">
+                    <input type="text" name="title" id="full-name" class="input-text" #title="ngModel" placeholder="Create Title" required  [(ngModel)]="book.bookTitle">
                 </div>
+                    <div *ngIf="title.errors?.['required']"
+                class="alert alert-danger">Title Missing!</div>
                 <div class="form-row">
-                    <input type="text" name="genre" id="your-email" class="input-text" placeholder="Update Genre" required [(ngModel)]="book.bookCategory">
-                </div>
-            </div>
-            <div class="form-row-total">
-                <div class="form-row">
-                    <input type="number" name="price" id="password" class="input-text" placeholder="Update Price" required  [(ngModel)]="book.bookPrice">
-                </div>
-                <div class="form-row">
-                    <input type="text" name="comfirm-password" id="comfirm-password" class="input-text" placeholder="Update Publisher" required  [(ngModel)]="book.bookPublisher">
+                    <input type="text" name="genre" id="your-email" class="input-text" placeholder="Create Genre" required [(ngModel)]="book.bookCategory">
                 </div>
             </div>
             <div class="form-row-total">
                 <div class="form-row">
-                    <input type="text" name="password" id="password" class="input-text" placeholder="Update Content" required  [(ngModel)]="book.bookContent">
+                    <input type="number" name="price" id="password" class="input-text" placeholder="Create Price" required  [(ngModel)]="book.bookPrice">
                 </div>
                 <div class="form-row">
-                    <input type="text" name="comfirm-password" id="comfirm-password" class="input-text" placeholder="Update Desciption" required  [(ngModel)]="book.bookDescription">
+                    <input type="text" name="comfirm-password" id="comfirm-password" class="input-text" placeholder="Create Publisher" required  [(ngModel)]="book.bookPublisher">
+                </div>
+            </div>
+            <div class="form-row-total">
+                <div class="form-row">
+                    <input type="text" name="password" id="password" class="input-text" placeholder="Create Content" required  [(ngModel)]="book.bookContent">
+                </div>
+                <div class="form-row">
+                    <input type="text" name="comfirm-password" id="comfirm-password" class="input-text" placeholder="Create Desciption" required  [(ngModel)]="book.bookDescription">
                 </div>
             </div>
             <div class="form-row-last">
