--- a/Client-side/DigitalBook/src/app/Component/author-update-book/author-update-book.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-update-book/author-update-book.component.html
@@ -4,7 +4,10 @@
             <h2>Update Book</h2>
             <div class="form-row-total">
                 <div class="form-row">
-                    <input type="number" name="full-name" id="full-name" class="input-text" placeholder="Enter Id" required  [(ngModel)]="book.bookId">
+                    <input type="number" name="bookid" #bookid="ngModel" id="full-name" class="input-text" placeholder="Enter Id" required  [(ngModel)]="book.bookId" required>
+                    
+                    <div *ngIf="bookid.errors?.['required']"
+                    class="alert alert-danger">BookId Missing!</div>
                 </div>
                 <div class="form-row">
                     <input type="text" name="genre" id="your-email" class="input-text" placeholder="Update Logo" required [(ngModel)]="book.bookLogo">
