--- a/Client-side/DigitalBook/src/app/Component/guest-home/guest-home.component.html
+++ b/Client-side/DigitalBook/src/app/Component/guest-home/guest-home.component.html
@@ -15,9 +15,9 @@
                 {{b.bookCategory}}
             </p>
             <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
+                {{b.bookPrice | currency:'INR'}}
             </p>
-            <button  type="button" class="btn btn-success" >Subscribe</button>
+            <button  type="button" class="btn btn-success" (click)="onReadClick()">Read</button>
         </li>
     </ul>
 </div>
