--- a/Client-side/DigitalBook/src/app/Component/reader-login/reader-login.component.html
+++ b/Client-side/DigitalBook/src/app/Component/reader-login/reader-login.component.html
@@ -21,17 +21,31 @@
               Account</u></b></a> it takes less than a minute</p>
       <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
         <div class="inputs">
-          <input name="username" placeholder="Username" type="text" class="form-control" id="exampleInputEmail1"
-            aria-describedby="emailHelp" [(ngModel)]="form.username">
+          <input name="username" #username="ngModel" placeholder="Username" type="text" class="form-control" id="exampleInputEmail1"
+            aria-describedby="emailHelp" [(ngModel)]="form.username" required>
+            <div *ngIf="username.invalid && (username.dirty || username.touched)"
+    class="alert alert-danger">Please enter your username!</div>
           <br>
-          <input name="password" placeholder="Password" type="text" class="form-control" id="exampleInputPassword1"
-            [(ngModel)]="form.password">
+          <input name="password" #password="ngModel" placeholder="Password" type="password" class="form-control" id="exampleInputPassword1"
+            minlength="6" [(ngModel)]="form.password" required><br>
+           <button type="submit" class="btn btn-primary">Login</button>
+            <div class="alert" *ngIf="password.errors?.['required']">Please Enter Password!
+          </div>
+          <div *ngIf="password.errors?.minlength">Invalid Password!</div>
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </div>
 
   </div>
 </div>
-<app-navbr></app-navbr>
+<div class="footer">
+  <div class="social">
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-google"></a>
+    <a href="#" class="fa fa-linkedin"></a>
+    <a href="#" class="fa fa-youtube"></a>
+  </div>
+  <p style="color: white;"> ©2020 developed & Managed by Digital Books</p>
+</div>
