--- a/Client-side/DigitalBook/src/app/app.component.css
+++ b/Client-side/DigitalBook/src/app/app.component.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(179, 67, 2);
+  background-image: linear-gradient(135deg, #e6aa65 10%, #ad7600 100%);
 
 }
 .footer {
