post deploymet on aws

--- a/Client-side/DigitalBook/src/app/Component/guest-search/guest-search.component.html
+++ b/Client-side/DigitalBook/src/app/Component/guest-search/guest-search.component.html
@@ -16,7 +16,7 @@
                 {{b.bookCategory}}
             </p>
             <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
+                {{b.bookPrice | currency:'INR'}}
             </p>
             <button type="button" class="btn btn-success" (click)="alertMethod()">Read</button>
         </li>
