--- a/Client-side/DigitalBook/src/app/Component/home-navbar/home-navbar.component.html
+++ b/Client-side/DigitalBook/src/app/Component/home-navbar/home-navbar.component.html
@@ -1,3 +1,4 @@
+
 <div class="topnav">
      <ul>
          <li><a [routerLink]="['/']"><i class="material-icons">home</i> <span class="nav-text"> Home</span></a></li>
@@ -7,6 +8,7 @@
          <div class="dropdown">
            <a  (click)="guestRedirect()"><i class="material-icons"> how_to_reg</i> <span class="nav-text"> Guest User</span></a>
          </div> 
-         <li style="float: right; margin-right: 45px;"><a [routerLink]="['/contactUs']"><span class="material-icons">contacts</span> <span class="nav-text"> Contact us</span></a></li> 
+         <li style="float: right; margin-right: 45px;"><a [routerLink]="['/contactus']"><span class="material-icons">contacts</span> <span class="nav-text"> Contact us</span></a></li> 
         </ul>
  </div>
+ 
