--- a/Client-side/DigitalBook/src/app/Component/reader-search/reader-search.component.html
+++ b/Client-side/DigitalBook/src/app/Component/reader-search/reader-search.component.html
@@ -14,7 +14,7 @@
                 {{b.bookCategory}}
             </p>
             <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
+                {{b.bookPrice | currency:'INR'}}
             </p>
             <p><span>Publisher- </span>
                 {{b.bookPublisher}}
