--- a/Client-side/DigitalBook/src/app/Component/author-blockbook/author-blockbook.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-blockbook/author-blockbook.component.html
@@ -14,7 +14,7 @@
                 {{b.bookCategory}}
             </p>
             <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
+                {{b.bookPrice | currency:'INR'}}
             </p>
         </li>
        
