--- a/Client-side/DigitalBook/src/app/Component/author-search/author-search.component.html
+++ b/Client-side/DigitalBook/src/app/Component/author-search/author-search.component.html
@@ -16,7 +16,7 @@
                 {{b.bookCategory}}
             </p>
             <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
+                {{b.bookPrice | currency:'INR'}}
             </p>
             <p><button type="button" class="btn btn-success" (click)="subscribeMethod(b)">Subscribe</button>&nbsp; &nbsp;&nbsp;<button type="button" class="btn btn-success" (click)="blockBook(b)">Block 🚫</button></p>
         </li>
