--- a/Client-side/DigitalBook/src/app/Component/reader-subscription/reader-subscription.component.html
+++ b/Client-side/DigitalBook/src/app/Component/reader-subscription/reader-subscription.component.html
@@ -15,7 +15,7 @@
                 {{b.bookCategory}}
             </p>
             <p><span>Price - </span>
-                {{b.bookPrice | currency:'EUR'}}
+                {{b.bookPrice | currency:'INR'}}
             </p>
             <p><button type="button" class="btn btn-success" (click)="readBook(b)">Read Book</button> &nbsp; <button type="button" class="btn btn-success" (click)="unsubscribeMethod(b)">Unsubscribe</button></p>
         </li>
